# Client-Bday-Extractor

./: app.py  data_validator.py  date_parser.py  google_apps_script.js  google_cloud_setup_guide.md  google_sheets_client.py  pdf_processor.py  pyproject.toml  requirements.txt  test_pymupdf.py
